--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,35 @@
 name: Main Foodgram workflow
 
-on: push
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   tests:
+    name: Test backend
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-    services:
-      postgres:
-        image: postgres:13.0-alpine
-        env:
-          POSTGRES_USER: foodgram_user
-          POSTGRES_PASSWORD: foodgram_password
-          POSTGRES_DB: foodgram
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt
-    - name: Test with flake8 and django tests
-      env:
-        POSTGRES_USER: foodgram_user
-        POSTGRES_PASSWORD: foodgram_password
-        POSTGRES_DB: foodgram
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
-      run: |
-        python -m flake8 backend/
-        cd backend/
-        python manage.py test
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8==6.0.0
+          pip install -r ./backend/requirements.txt
+      - name: Test with flake8
+        run: |
+          python -m flake8
+
   build_and_push_to_docker_hub:
-    name: Push Docker image to DockerHub
+    name: Build and Push Backend Image to DockerHub
     runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/main'
+    needs:
+      - tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -55,41 +40,42 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub backend
+      - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: ./backend/
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/foodgram_backend:latest
-      - name: Push to DockerHub frontend
+          tags: titkovaa/foodgram_backend:latest
+
+  build_frontend_and_push_to_docker_hub:
+    name: Build and Push Frontend Image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-      - name: Push to DockerHub gateway
-        uses: docker/build-push-action@v4
-        with:
-          context: ./infra/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
+          tags: titkovaa/foodgram_frontend:latest
+
   deploy:
+    name: Deploy to Remote Server 
     runs-on: ubuntu-latest
     needs:
       - build_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/main'
+      - build_frontend_and_push_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Copy docker-compose.production.yml via ssh
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "infra/docker-compose.production.yml"
-          target: "foodgram_project"
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -98,25 +84,23 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd foodgram_project
+            cd foodgram
             sudo docker compose -f docker-compose.production.yml pull
             sudo docker compose -f docker-compose.production.yml down
             sudo docker compose -f docker-compose.production.yml up -d
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-            sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/static/. /app/backend_static/
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --no-input
+            sudo docker compose -f docker-compose.production.yml exec backend cp -r ./collected_static/. /app/static/
+
   send_message:
+    name: Sending Messege to Telegram Bot
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.ref == 'refs/heads/main'
     steps:
       - name: Send message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Деплой проекта успешно выполнен!
-            Push выполнил ${{ github.actor }}
-            Сообщение коммита: ${{ github.event.commits[0].message }}
-            https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+          message: Деплой Foodgram успешно выполнен!
