--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -2,20 +2,21 @@ version: '3.3'
 
 volumes:
   pg_data:
-  static:
   media:
+  static:
 
 services:
   db:
-    image: postgres:13.0-alpine
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    env_file: .env
-
-  backend:
-    image: titkovaa/foodgram_backend
+    image: postgres:13.10
     env_file: .env
     restart: always
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+  backend:
+    image: titkovaa/foodgram_backend:latest
+    restart: always
+    env_file: .env
     volumes:
       - static:/app/static/
       - media:/app/media/
@@ -23,25 +24,19 @@ services:
       - db
 
   frontend:
-    image: titkovaa/foodgram_frontend
-    env_file: .env
+    image: titkovaa/foodgram_frontend:latest
     volumes:
-      - ../frontend/:/app/result_build/
-    depends_on:
-      - backend
+      - ./frontend/:/app/result_build/
 
   nginx:
-    image: titkovaa/foodgram_gateway
-    env_file: .env
+    image: nginx:1.19.3
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/static/
-      - media:/app/media/
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
+      - static:/static
+      - media:/var/html/media/
     depends_on:
       - backend
-      - frontend
-      - db
