--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,18 @@
 [flake8]
 ignore =
     W503,
-    F811,
-    I004,
-    I001,
-    I005
+    F811
+
 exclude =
     tests/,
+    */tests.py,
     */migrations/,
     venv/,
-    env/
+    */venv/,
+    .venv/,
+    */.venv/,
+    env/,
+    */env/,
+
 per-file-ignores =
     */settings.py:E501
-max-complexity = 10
