--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m flake8
 
-  build_and_push_to_docker_hub:
+  build_backend_and_push_to_docker_hub:
     name: Build and Push Backend Image to DockerHub
     runs-on: ubuntu-latest
     needs:
@@ -45,7 +45,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: titkovaa/foodgram_backend:latest
+          tags: ${{secrets.DOCKER_USERNAME}}/foodgram_backend:latest
 
   build_frontend_and_push_to_docker_hub:
     name: Build and Push Frontend Image to DockerHub
@@ -65,7 +65,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: titkovaa/foodgram_frontend:latest
+          tags: ${{secrets.DOCKER_USERNAME}}/foodgram_frontend:latest
 
   deploy:
     name: Deploy to Remote Server 
