--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-backend/media/*
-
 # Distribution / packaging
 .Python
 build/
@@ -104,7 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-backend/.env
+.env
 .venv
 env/
 venv/
