--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,42 +1,9 @@
 server {
     listen 80;
-    server_name foodgramtitan.zapto.org;
-    server_tokens off;
-    client_max_body_size 20M;
-
-    location /media/ {
-        proxy_set_header        Host $host;
-        root /var/html/;
-  }
-
-    location /static/admin/ {
-        autoindex on;
-        alias /static/admin/;
-        index index.html;
-    }
-
-    location /static/rest_framework {
-        alias /static/rest_framework;
-    }
-
     location /api/docs/ {
-        alias /usr/share/nginx/html/api/docs/;
+        root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_pass http://backend:8080/api/;
-    }
-
-    location /admin/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8080/admin/;
-    }
-
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
