--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.7.2
 Django==5.0.3
 django-colorfield==0.11.0
+django-extra-fields==3.0.2
+django-filter==24.2
+djangorestframework==3.15.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 pillow==10.2.0
 sqlparse==0.4.4
 tzdata==2024.1
